# opengl-example

./: CMakeLists.txt  build-and-run.sh  build.sh
lib/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
lib/imgui/glfw/: CMakeLists.txt
lib/imgui/opengl3/: CMakeLists.txt
res/shader/: basic.shader
res/shader/basic-square/: basic.shader
res/shader/projection-matrix/: projection.shader
src/: CMakeLists.txt  index-buffer.cpp  index-buffer.h  main.cpp  renderer.cpp  renderer.h  root.cpp  root.h  shader.cpp  shader.h  texture.cpp  texture.h  utils.cpp  utils.h  vertex-array.cpp  vertex-array.h  vertex-buffer-layout.cpp  vertex-buffer-layout.h  vertex-buffer.cpp  vertex-buffer.h
src/debug/: debug-callback.cpp  debug-callback.h  debug-message-control-info.h
src/di-context/: di-context.h
src/di-context/bindings/: states-binding.h
src/example/: CMakeLists.txt  menu-example.cpp  menu-example.h
src/example/base/: example.h
src/injectors/: di-context.h
src/injectors/bindings/: examples-binding.h
src/renderer/: basic-renderer.cpp  basic-renderer.h  sprite.cpp  sprite.h
src/roots/: example-root.h
src/roots/base/: iroot.h  root.h
src/states/: CMakeLists.txt  menu-state.cpp  menu-state.h
src/states/base/: iroot.h  state.h
src/states/enums/: state-id.h
src/states/roots/: root.cpp  root.h
src/states/roots/base/: iroot.h
src/states/states/: basic-renderer-state.cpp  basic-renderer-state.h  basic-square-state.cpp  basic-square-state.h  clear-color-state.cpp  clear-color-state.h  menu-state.cpp  menu-state.h  projection-matrix-state.cpp  projection-matrix-state.h  texture-2d-state.cpp  texture-2d-state.h
src/states/states/base/: state.cpp  state.h
src/test/: CMakeLists.txt  test-clear-color.cpp  test-clear-color.h  test-menu.cpp  test-menu.h  test-texture2d.cpp  test-texture2d.h  test.cpp  test.h
src/utils/: ifactory.h  keys.h
test/: CMakeLists.txt
test/root/: root-test.cpp
